--- a/src/components/donut-chart/donut-chart.css
+++ b/src/components/donut-chart/donut-chart.css
@@ -21,4 +21,13 @@
   height: 12px;
   border-radius: 50%;
   margin-right: 4px;
+}
+.donut-chart-wrapper {
+  width: 100%;
+}
+.chart-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
 } 
